--- a/tinkergraph_dev_server/gremlin-server.yaml
+++ b/tinkergraph_dev_server/gremlin-server.yaml
@@ -19,26 +19,65 @@ host: localhost
 port: 8182
 evaluationTimeout: 30000
 channelizer: org.apache.tinkerpop.gremlin.server.channel.WebSocketChannelizer
-graphs: {
-  graph: conf/tinkergraph-empty.properties}
-scriptEngines: {
-  gremlin-groovy: {
-    plugins: { org.apache.tinkerpop.gremlin.server.jsr223.GremlinServerGremlinPlugin: {},
-               org.apache.tinkerpop.gremlin.tinkergraph.jsr223.TinkerGraphGremlinPlugin: {},
-               org.apache.tinkerpop.gremlin.jsr223.ImportGremlinPlugin: {classImports: [java.lang.Math], methodImports: [java.lang.Math#*]},
-               org.apache.tinkerpop.gremlin.jsr223.ScriptFileGremlinPlugin: {files: [scripts/empty-sample.groovy]}}}}
+graphs: { graph: conf/tinkergraph-empty.properties }
+scriptEngines:
+  {
+    gremlin-groovy:
+      {
+        plugins:
+          {
+            org.apache.tinkerpop.gremlin.server.jsr223.GremlinServerGremlinPlugin:
+              {},
+            org.apache.tinkerpop.gremlin.tinkergraph.jsr223.TinkerGraphGremlinPlugin:
+              {},
+            org.apache.tinkerpop.gremlin.jsr223.ImportGremlinPlugin:
+              {
+                classImports: [java.lang.Math],
+                methodImports: [java.lang.Math#*],
+              },
+            org.apache.tinkerpop.gremlin.jsr223.ScriptFileGremlinPlugin:
+              { files: [scripts/empty-sample.groovy] },
+          },
+      },
+  }
 serializers:
-  - { className: org.apache.tinkerpop.gremlin.util.ser.GraphSONMessageSerializerV3, config: { ioRegistries: [org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerIoRegistryV3] }}            # application/json
-  - { className: org.apache.tinkerpop.gremlin.util.ser.GraphBinaryMessageSerializerV1 }                                                                                                           # application/vnd.graphbinary-v1.0
-  - { className: org.apache.tinkerpop.gremlin.util.ser.GraphBinaryMessageSerializerV1, config: { serializeResultToString: true }}                                                                 # application/vnd.graphbinary-v1.0-stringd
+  - {
+      className: org.apache.tinkerpop.gremlin.util.ser.GraphSONMessageSerializerV3,
+      config:
+        {
+          ioRegistries:
+            [
+              org.apache.tinkerpop.gremlin.tinkergraph.structure.TinkerIoRegistryV3,
+            ],
+        },
+    } # application/json
+  - {
+      className: org.apache.tinkerpop.gremlin.util.ser.GraphBinaryMessageSerializerV1,
+    } # application/vnd.graphbinary-v1.0
+  - {
+      className: org.apache.tinkerpop.gremlin.util.ser.GraphBinaryMessageSerializerV1,
+      config: { serializeResultToString: true },
+    } # application/vnd.graphbinary-v1.0-stringd
 processors:
-  - { className: org.apache.tinkerpop.gremlin.server.op.session.SessionOpProcessor, config: { sessionTimeout: 28800000 }}
-  - { className: org.apache.tinkerpop.gremlin.server.op.traversal.TraversalOpProcessor}
-metrics: {
-  consoleReporter: {enabled: true, interval: 180000},
-  csvReporter: {enabled: true, interval: 180000, fileName: /tmp/gremlin-server-metrics.csv},
-  jmxReporter: {enabled: true},
-  slf4jReporter: {enabled: true, interval: 180000}}
+  - {
+      className: org.apache.tinkerpop.gremlin.server.op.session.SessionOpProcessor,
+      config: { sessionTimeout: 28800000 },
+    }
+  - {
+      className: org.apache.tinkerpop.gremlin.server.op.traversal.TraversalOpProcessor,
+    }
+metrics:
+  {
+    consoleReporter: { enabled: true, interval: 180000 },
+    csvReporter:
+      {
+        enabled: true,
+        interval: 180000,
+        fileName: /tmp/gremlin-server-metrics.csv,
+      },
+    jmxReporter: { enabled: true },
+    slf4jReporter: { enabled: true, interval: 180000 },
+  }
 strictTransactionManagement: false
 idleConnectionTimeout: 0
 keepAliveInterval: 0
@@ -50,6 +89,4 @@ maxAccumulationBufferComponents: 1024
 resultIterationBatchSize: 64
 writeBufferLowWaterMark: 32768
 writeBufferHighWaterMark: 65536
-ssl: {
-  enabled: false
-}
+ssl: { enabled: false }
