--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,26 +27,18 @@ repos:
         language: system
         types: [python]
         stages: [manual]
-      - id: autoflake
-        name: autoflake
-        entry: autoflake
+      - id: ruff
+        name: ruff
+        entry: ruff
         language: system
         types: [python]
-        require_serial: true
-        args: ["-r", "--imports=gremlin_python,oh_gee_em,pydantic", "."]
+        args: ["check"]
       - id: end-of-file-fixer
         name: Fix End of Files
         entry: end-of-file-fixer
         language: system
         types: [text]
         stages: [commit, push, manual]
-      - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types: [python]
-        require_serial: true
-        args: [--darglint-ignore-regex, .*]
       - id: isort
         name: isort
         entry: isort
