--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,3 @@
-[tool.ruff]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
 select = ["E4", "E7", "E9", "F"]
 ignore = []
@@ -41,6 +40,6 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 # Assume Python 3.10
 target-version = "py310"
 
-[tool.ruff.mccabe]
+[mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
