finally get vertices.create() working, took a while to work out the query = g; for loop; iterate; refetch() pattern that was needed to make large bulks work well.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
         entry: ruff
         language: system
         types: [python]
-        args: ["check"]
+        args: ["check", "--fix"]
       - id: end-of-file-fixer
         name: Fix End of Files
         entry: end-of-file-fixer
